<?xml version="1.0"?>
<package>
  <name>ie_project</name>
  <version>0.0.0</version>
  <description>The image enhancement package</description>

  <maintainer email="jaron0211@gmail.com">jaron0211</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
